--- a/src/app/components/layouts/header/header.component.html
+++ b/src/app/components/layouts/header/header.component.html
@@ -115,20 +115,15 @@
                             <a href="javascript:void(0)" class="nav-link dropdown-toggle">Products <i class="icofont-rounded-right"></i></a>
                             
                             <ul class="dropdown-menu">
-                                <li class="nav-item"><a routerLink="/" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Fesidential Fence</a></li>
-                                <li class="nav-item"><a routerLink="/" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Industrial Fence</a></li>
-                                <li class="nav-item"><a routerLink="/" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Commercial Fence</a></li>
-                                <li class="nav-item"><a routerLink="/" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Cantilever & Bifold Gates</a></li>
-                                <li class="nav-item"><a routerLink="/" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Fittings and Fence Accessories</a></li>
-                                <li class="nav-item"><a routerLink="/" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Custom Work</a></li>
-                                <li class="nav-item"><a routerLink="/" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">CNC</a></li>
+                                <li class="nav-item"><a routerLink="/" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Temporary fence</a></li>
+                                <li class="nav-item"><a routerLink="/" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Ornamental fence</a></li>
                             </ul>
                         </li> 
 
                         <!-- <li class="nav-item"><a routerLink="/rentals" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Rentals</a></li> -->
 
                         <li class="nav-item">
-                            <a href="javascript:void(0)" class="nav-link dropdown-toggle">Rentals <i class="icofont-rounded-right"></i></a>
+                            <a href="javascript:void(0)" class="nav-link dropdown-toggle">Services  <i class="icofont-rounded-right"></i></a>
                             
                             <ul class="dropdown-menu">
                                 <li class="nav-item"><a routerLink="/" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Temporary Tree Protection Fence</a></li>
@@ -138,12 +133,14 @@
                             </ul>
                         </li> 
 
+                        <li class="nav-item"><a routerLink="/bog" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Blog</a></li>
+                        <li class="nav-item"><a routerLink="/careers" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Careers</a></li>
                         <li class="nav-item"><a routerLink="/contact" class="nav-link" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">Contact</a></li>
                     </ul>
 
-                    <div class="navbar-button">
+                    <!-- <div class="navbar-button">
                         <a routerLink="/contact">Get Quote</a>
-                    </div>
+                    </div> -->
                 </div>
             </nav>
         </div>
