--- a/src/app/components/pages/about/about.component.html
+++ b/src/app/components/pages/about/about.component.html
@@ -99,3 +99,94 @@
         </div>
     </div>
 </div>
+
+<section class="team-section team-style-two team-style-three pb-70">
+    <div class="container">
+        <div class="section-head text-center">
+            <h2>Our <span>Team Members</span></h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor contratc ut labore et dolore magna aliqua.</p>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="team-card">
+                    <div class="team-img">
+                        <img src="assets/img/team/1.png" alt="team member">
+
+                        <div class="team-social">
+                            <a href="#" target="_blank"><i class="icofont-facebook"></i></a>
+                            <a href="#" target="_blank"><i class="icofont-twitter"></i></a>
+                            <a href="#" target="_blank"><i class="icofont-linkedin"></i></a>
+                            <a href="#" target="_blank"><i class="icofont-instagram"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="team-text">
+                        <h4>John Smith</h4>
+                        <p>Head of Cleaner</p>
+                    </div>
+                </div>
+            </div> 
+            
+            <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="team-card">
+                    <div class="team-img">
+                        <img src="assets/img/team/2.png" alt="team member">
+
+                        <div class="team-social">
+                            <a href="#" target="_blank"><i class="icofont-facebook"></i></a>
+                            <a href="#" target="_blank"><i class="icofont-twitter"></i></a>
+                            <a href="#" target="_blank"><i class="icofont-linkedin"></i></a>
+                            <a href="#" target="_blank"><i class="icofont-instagram"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="team-text">
+                        <h4>Marry</h4>
+                        <p>Cleaner</p>
+                    </div>
+                </div>
+            </div> 
+
+            <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="team-card">
+                    <div class="team-img">
+                        <img src="assets/img/team/3.png" alt="team member">
+
+                        <div class="team-social">
+                            <a href="#" target="_blank"><i class="icofont-facebook"></i></a>
+                            <a href="#" target="_blank"><i class="icofont-twitter"></i></a>
+                            <a href="#" target="_blank"><i class="icofont-linkedin"></i></a>
+                            <a href="#" target="_blank"><i class="icofont-instagram"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="team-text">
+                        <h4>John Smith</h4>
+                        <p>Office Cleaner</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="team-card">
+                    <div class="team-img">
+                        <img src="assets/img/team/4.png" alt="team member">
+
+                        <div class="team-social">
+                            <a href="#" target="_blank"><i class="icofont-facebook"></i></a>
+                            <a href="#" target="_blank"><i class="icofont-twitter"></i></a>
+                            <a href="#" target="_blank"><i class="icofont-linkedin"></i></a>
+                            <a href="#" target="_blank"><i class="icofont-instagram"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="team-text">
+                        <h4>Eve</h4>
+                        <p>Assistant</p>
+                    </div>
+                </div>
+            </div> 
+        </div>
+    </div>
+</section>
