--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,44 +1,251 @@
-<div class="home-style-three home-bg-three">
-    <div class="d-table">
-        <div class="d-table-cell">
-            <div class="container-fluid">
-                <div class="row align-items-center">
-                    <div class="col-md-7 offset-lg-1">
-                        <div class="home-text-three">
-                            <h1><span>Leading Fencing </span>Supplies In Canada</h1>
-                            <p>VG Fence Products is a trusted fence supplies company dealing with all kinds of products
-                                including vinyl, wood, steel, aluminum. We are a distributor of high quality commercial,
-                                industrial and agricultural Fence supplies to some of the leading fencing contractors
-                                across Canada & USA </p>
-
+<div class="home-section">
+    <div class="home-slider-area owl-carousel owl-theme">
+        <div class="home-slider-item items-bg1">
+            <div class="d-table">
+                <div class="d-table-cell">
+                    <div class="container">
+                        <div class="home-text">
+                            <h1>Your Hygienic Home Our Responsibility</h1>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Viverra maecenas accumsan lacus vel facilisis. Quis ipsum suspendisse ultrices gravida.</p>
                             <div class="theme-button">
-                                <a routerLink="/contact" class="default-btn active-btn">Get A Quote</a>
-                                <a routerLink="/" class="default-btn">Products</a>
+                                <a routerLink="/about" class="default-btn active-btn">Know More</a>
+                                <a routerLink="/contact" class="default-btn">Get Started</a>
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
 
-                    <div class="col-lg-4 col-md-5 p-0">
-                        <div class="home-image">
-                            <img src="assets/img/home/home.jpg" alt="home image">
+        <div class="home-slider-item items-bg2">
+            <div class="d-table">
+                <div class="d-table-cell">
+                    <div class="container">
+                        <div class="home-text">
+                            <h1>We provide High Quality Service</h1>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Viverra maecenas accumsan lacus vel facilisis. Quis ipsum suspendisse ultrices gravida.</p>
+                            <div class="theme-button">
+                                <a routerLink="/about" class="default-btn active-btn">Know More</a>
+                                <a routerLink="/contact" class="default-btn">Get Started</a>
+                            </div>
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
 
-                <div class="home-three-shapes">
-                    <img src="assets/img/process-pattern-3.png" alt="shape">
-                    <img src="assets/img/process-pattern-4.png" alt="shape">
-                    <img src="assets/img/process-pattern-5.png" alt="shape">
-                    <img src="assets/img/process-pattern-6.png" alt="shape">
-                    <img src="assets/img/process-pattern-7.png" alt="shape">
-                    <img src="assets/img/process-pattern-6.png" alt="shape">
+        <div class="home-slider-item items-bg3">
+            <div class="d-table">
+                <div class="d-table-cell">
+                    <div class="container">
+                        <div class="home-text">
+                            <h1>Our Working Process is Unique</h1>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Viverra maecenas accumsan lacus vel facilisis. Quis ipsum suspendisse ultrices gravida.</p>
+                            <div class="theme-button">
+                                <a routerLink="/about" class="default-btn active-btn">Know More</a>
+                                <a routerLink="/contact" class="default-btn">Get Started</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-<section class="about-style-two pt-100">
+<div class="recent-style-two pt-100 pb-70">
+    <div class="container">
+        
+        <div class="section-head blue-title text-center">
+            <h2>Our <span>Products</span></h2>
+            <p>Lorem Ipsum is simply dummied text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+        </div>
+        
+        <div class="row">
+            <div class="col-lg-4 col-md-6">
+                <div class="recent-items">
+                    <div class="recent-img">
+                        <img src="assets/img/recent-work/1.png" alt="project image">
+
+                        <div class="recent-hover">
+                            <div class="d-table">
+                                <div class="d-table-cell">
+                                    <a href="assets/img/recent-work/1.png" class="popup-gallery">
+                                        <i class="icofont-eye-alt"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="recent-items">
+                    <div class="recent-img">
+                        <img src="assets/img/recent-work/2.png" alt="project image">
+
+                        <div class="recent-hover">
+                            <div class="d-table">
+                                <div class="d-table-cell">
+                                    <a href="assets/img/recent-work/2.png" class="popup-gallery">
+                                        <i class="icofont-eye-alt"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="recent-items">
+                    <div class="recent-img">
+                        <img src="assets/img/recent-work/3.png" alt="project image">
+
+                        <div class="recent-hover">
+                            <div class="d-table">
+                                <div class="d-table-cell">
+                                    <a href="assets/img/recent-work/3.png" class="popup-gallery">
+                                        <i class="icofont-eye-alt"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="recent-items">
+                    <div class="recent-img">
+                        <img src="assets/img/recent-work/4.png" alt="project image">
+
+                        <div class="recent-hover">
+                            <div class="d-table">
+                                <div class="d-table-cell">
+                                    <a href="assets/img/recent-work/4.png" class="popup-gallery">
+                                        <i class="icofont-eye-alt"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="recent-items">
+                    <div class="recent-img">
+                        <img src="assets/img/recent-work/5.png" alt="project image">
+
+                        <div class="recent-hover">
+                            <div class="d-table">
+                                <div class="d-table-cell">
+                                    <a href="assets/img/recent-work/5.png" class="popup-gallery">
+                                        <i class="icofont-eye-alt"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="recent-items">
+                    <div class="recent-img">
+                        <img src="assets/img/recent-work/11.png" alt="project image">
+
+                        <div class="recent-hover">
+                            <div class="d-table">
+                                <div class="d-table-cell">
+                                    <a href="assets/img/recent-work/11.png" class="popup-gallery">
+                                        <i class="icofont-eye-alt"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<section class="service-section pt-100 pb-70">
+    <div class="container">
+        <div class="section-head text-center">
+            <h2>What <span>we do</span></h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor contratc ut labore et dolore magna aliqua.</p>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-4 col-md-6">
+                <div class="service-card">
+                    <i class="flaticon-award"></i>
+                    <h3>Top Rated Service</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor contract.</p>
+                    <div class="theme-button">
+                        <a routerLink="/service-details" class="default-btn">Read More</a>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="col-lg-4 col-md-6">
+                <div class="service-card active-service">
+                    <i class="flaticon-credit-card"></i>
+                    <h3>Low Cost Service</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor contract.</p>
+                    <div class="theme-button">
+                        <a routerLink="/service-details" class="default-btn">Read More</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+                <div class="service-card">
+                    <i class="flaticon-clock"></i>
+                    <h3>Fastest Service</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor contract.</p>
+                    <div class="theme-button">
+                        <a routerLink="/service-details" class="default-btn">Read More</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+                <div class="service-card">
+                    <i class="flaticon-cleaning-spray"></i>
+                    <h3>Professional Cleaning</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor contract.</p>
+                    <div class="theme-button">
+                        <a routerLink="/service-details" class="default-btn">Read More</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+                <div class="service-card">
+                    <i class="flaticon-clean-house"></i>
+                    <h3>House Cleaning</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor contract.</p>
+                    <div class="theme-button">
+                        <a routerLink="/service-details" class="default-btn">Read More</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+                <div class="service-card">
+                    <i class="flaticon-wiper"></i>
+                    <h3>Office Cleaning</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor contract.</p>
+                    <div class="theme-button">
+                        <a routerLink="/service-details" class="default-btn">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- <section class="about-style-two pt-100">
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-6 col-md-12">
@@ -98,7 +305,7 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 
 <div class="service-style-three pt-100 pb-70">
     <div class="container">
@@ -343,6 +550,40 @@
     </div>
 </section>
 
+<div class="testimonial-section testimonial-bg ptb-50">
+    <div class="testimonial-area">
+        <div class="container">
+
+            <div class="section-head text-center">
+                <h2> What our Clients Think</h2>
+            </div>
+
+            <div class="testimonial-slider owl-carousel owl-theme text-center">
+                <div class="sin-testiText">
+                    <h2>Stepheny Mc.man</h2>
+                    <span>Designation, organization</span>
+                    <p>VG Fence Products are highly professional right from the initial quote till they delivered the
+                        supplies.I am extremely glad with their timely services.</p>
+                </div>
+
+                <div class="sin-testiText">
+                    <h2>Jackson</h2>
+                    <span>Designation, organization</span>
+                    <p>We are very happy with the fence fabrication services from this team. They are really highly
+                        skilled fence experts.</p>
+                </div>
+
+                <div class="sin-testiText">
+                    <h2>Amelia</h2>
+                    <span>Designation, organization</span>
+                    <p>I am highly satisfied with the high quality fence products from these guys for my huge commercial
+                        project.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <section class="why-us">
     <div class="container-fluid">
         <div class="row">
@@ -390,32 +631,3 @@
         </div>
     </div>
 </section>
-
-<div class="testimonial-section testimonial-bg ptb-100">
-    <div class="testimonial-area">
-        <div class="container">
-            <div class="testimonial-slider owl-carousel owl-theme text-center">
-                <div class="sin-testiText">
-                    <h2>Stepheny Mc.man</h2>
-                    <span>Designation, organization</span>
-                    <p>VG Fence Products are highly professional right from the initial quote till they delivered the
-                        supplies.I am extremely glad with their timely services.</p>
-                </div>
-
-                <div class="sin-testiText">
-                    <h2>Jackson</h2>
-                    <span>Designation, organization</span>
-                    <p>We are very happy with the fence fabrication services from this team. They are really highly
-                        skilled fence experts.</p>
-                </div>
-
-                <div class="sin-testiText">
-                    <h2>Amelia</h2>
-                    <span>Designation, organization</span>
-                    <p>I am highly satisfied with the high quality fence products from these guys for my huge commercial
-                        project.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
