--- a/src/styles.scss
+++ b/src/styles.scss
@@ -58,6 +58,10 @@ h3 {
     outline: 0;
     box-shadow: 0 0 0 0 !important;
 }
+.ptb-50 {
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
 .ptb-100 {
     padding-top: 100px;
     padding-bottom: 100px;
